# numerical-methods-part2

./: .gitignore  CMakeLists.txt  README.md  app.py  configurar_cor.py  main.cpp
.streamlit/: config.toml
app/: SistemaJatos.cpp  SistemaJatos.hpp
menu/: Menu.cpp  Menu.hpp
metodos/: SistemaLinear.cpp  SistemaLinear.hpp
metodos/FatoracaoLDP/: FatoracaoLDP.cpp  FatoracaoLDP.hpp
metodos/FatoracaoLU/: FatoracaoLU.cpp  FatoracaoLU.hpp
relatorios/: Relatorio.cpp  Relatorio.hpp
